# engineering-lab

./: .gitignore  LICENSE  README.md
ai-commerce/rag-product-discovery/: .env.example  docker-compose.yml  pyproject.toml
ai-commerce/rag-product-discovery/src/agent/: config.py
ddia-implementations/ch01-reliability/: Makefile  NOTES.md  README.md  go.mod  main.go
ddia-implementations/ch01-reliability/cmd/loadgen/: NOTES.md  main.go
ddia-implementations/ch01-reliability/internal/fault/: NOTES.md  injector.go  injector_test.go
ddia-implementations/ch01-reliability/internal/handler/: NOTES.md  handler.go
ddia-implementations/ch01-reliability/internal/health/: NOTES.md  checker.go
distributed-systems-go/url-shortner/: Dockerfile  NOTES_architecture.md  NOTES_docker.md  NOTES_main.md  docker-compose.yml  go.mod  go.sum  main.go
distributed-systems-go/url-shortner/analytics/: NOTES.md  tracker.go
distributed-systems-go/url-shortner/handler/: NOTES.md  handler.go
distributed-systems-go/url-shortner/middleware/: NOTES.md  ipWhiteList.go  logging.go  ratelimit.go
distributed-systems-go/url-shortner/migrations/: 001_create_urls_table.sql
distributed-systems-go/url-shortner/shortcode/: NOTES.md  generate.go
distributed-systems-go/url-shortner/store/: NOTES.md  cached.go  errors.go  memory.go  postgres.go
distributed-systems-go/url-shortner/types/: NOTES.md  types.go
software-architecture/di-and-modularity/: GUIDE.md  README.md
software-architecture/di-and-modularity/finance-tracker/: package-lock.json  package.json  tsconfig.build.json
(+31 files in other folders)
